--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -86,7 +86,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:layout_marginRight="-4dp"
+                                android:layout_marginEnd="-4dp"
                                 android:maxLength="6"
                                 android:maxLines="1"
                                 android:paddingEnd="@dimen/padding_2"
@@ -126,7 +126,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:layout_marginLeft="-4dp"
+                                android:layout_marginStart="-4dp"
                                 android:layout_toEndOf="@id/wall_team_right_image"
                                 android:maxLength="6"
                                 android:maxLines="1"
@@ -178,9 +178,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingTop="@dimen/padding_8"
-                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
                         android:paddingBottom="4dp"
-                        android:paddingRight="16dp"
+                        android:paddingEnd="16dp"
                         android:text="@string/access_full"
                         android:textAlignment="center"
                         android:textColor="@color/white"
@@ -191,8 +191,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/margin_20"
                         android:layout_marginTop="8dp"
-                        android:paddingLeft="16dp"
-                        android:paddingRight="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
                         android:gravity="center"
                         android:orientation="horizontal">
 
@@ -200,8 +200,8 @@
                             android:id="@+id/join_now_button"
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="wrap_content"
-                            android:paddingLeft="32dp"
-                            android:paddingRight="32dp"
+                            android:paddingStart="32dp"
+                            android:paddingEnd="32dp"
                             android:layout_height="@dimen/standard_button_height"
                             android:background="@drawable/gym_bag_button_background"
                             android:text="@string/join"
@@ -215,8 +215,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:paddingLeft="16dp"
-                            android:paddingRight="16dp"
+                            android:paddingStart="16dp"
+                            android:paddingEnd="16dp"
                             android:text="@string/or"
                             android:textAlignment="center"
                             android:textColor="@color/white"
@@ -225,8 +225,8 @@
                         <Button
                             android:id="@+id/login_button"
                             style="?android:attr/borderlessButtonStyle"
-                            android:paddingLeft="32dp"
-                            android:paddingRight="32dp"
+                            android:paddingStart="32dp"
+                            android:paddingEnd="32dp"
                             android:layout_width="wrap_content"
                             android:layout_height="@dimen/standard_button_height"
                             android:layout_gravity="center"
@@ -246,7 +246,7 @@
                     android:id="@+id/fragment_wall_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:paddingLeft="16dp"
+                    tools:paddingStart="16dp"
                     android:nestedScrollingEnabled="false"
                     android:layout_below="@id/login_holder"
                     android:layout_marginTop="?wallRecyclerListPhoneTopMargin"
