--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -200,7 +200,7 @@
                 android:layout_alignParentEnd="true"
                 android:alpha="0.5"
                 android:layout_width="24dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_lock_outline_black_24dp"/>
 
