--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -381,7 +381,7 @@
                     android:layout_marginTop="@dimen/margin_20"
                     android:clipToPadding="false"
                     android:paddingBottom="16dp"
-                    tools:paddingLeft="16dp" />
+                    tools:paddingStart="16dp" />
 
                 <RelativeLayout
                     android:id="@+id/share_buttons_container"
@@ -428,7 +428,7 @@
         android:id="@+id/close_button"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginLeft="-8dp"
+        android:layout_marginStart="-8dp"
         android:layout_marginTop="16dp"
         android:background="@null"
         android:foreground="?selectableItemBackgroundBorderless"
@@ -474,7 +474,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginBottom="@dimen/margin_10"
-                android:layout_marginRight="4dp"
+                android:layout_marginEnd="4dp"
                 android:layout_marginTop="14dp"
                 tools:src="?profileImageIcon" />
 
@@ -483,13 +483,13 @@
                 fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="top"
                 android:inputType="textCapSentences"
                 android:paddingBottom="15dp"
-                android:paddingRight="8dp"
+                android:paddingEnd="8dp"
                 android:paddingTop="14dp"
                 android:singleLine="true"
                 android:textColor="#cd008643"
