--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -37,8 +37,8 @@
                 android:maxLines="4"
                 android:hyphenationFrequency="full"
                 android:paddingBottom="8dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:paddingTop="16dp"
                 tools:text="@string/lorem_ipsum"
                 android:textColor="#1b1c1a"
@@ -52,7 +52,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:gravity="bottom"
                 android:orientation="horizontal">
 
@@ -71,7 +71,7 @@
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_marginBottom="4dp"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     tools:src="@drawable/ic_social_source_facebook"/>
 
                 <Space
@@ -99,7 +99,7 @@
                     android:id="@+id/likes_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginEnd="8dp"
                     android:textSize="@dimen/font_size_10"
                     tools:text="6901" />
 
