--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -11,8 +11,8 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:descendantFocusability="blocksDescendants"
         android:layout_above="@id/container"
+        android:descendantFocusability="blocksDescendants"
         app:srl_direction="bottom">
 
         <android.support.v4.widget.NestedScrollView
@@ -52,19 +52,19 @@
                         android:layout_height="match_parent"
                         android:layout_centerInParent="true"
                         android:layout_gravity="center"
-                        android:paddingTop="25dp"
                         android:gravity="center"
+                        android:paddingTop="25dp"
                         android:shadowColor="@color/black_transparent_154"
                         android:shadowDx="1"
                         android:shadowDy="1"
-                        tools:visibility="visible"
                         android:shadowRadius="2"
                         android:text="@string/wall"
                         android:textAlignment="center"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
                         android:textSize="@dimen/font_size_36"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        tools:visibility="visible" />
 
                     <RelativeLayout
                         android:id="@+id/wall_top_info_container"
@@ -107,11 +107,11 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_toEndOf="@id/wall_team_left_image"
-                                tools:visibility="gone"
                                 android:padding="@dimen/padding_8"
                                 android:text="@string/vs"
                                 android:textColor="@color/white"
-                                android:textSize="20sp" />
+                                android:textSize="20sp"
+                                tools:visibility="gone" />
 
                             <ImageView
                                 android:id="@+id/wall_team_right_image"
@@ -173,14 +173,14 @@
 
                     <TextView
                         android:id="@+id/textView2"
-                        android:lineSpacingMultiplier="0.8"
                         style="@style/fontTitilliumWebLight"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingTop="@dimen/padding_8"
-                        android:paddingStart="16dp"
+                        android:lineSpacingMultiplier="0.8"
                         android:paddingBottom="4dp"
                         android:paddingEnd="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingTop="@dimen/padding_8"
                         android:text="@string/access_full"
                         android:textAlignment="center"
                         android:textColor="@color/white"
@@ -191,19 +191,19 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/margin_20"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
                         android:gravity="center"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:paddingEnd="16dp"
+                        android:paddingStart="16dp">
 
                         <Button
                             android:id="@+id/join_now_button"
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="wrap_content"
-                            android:paddingStart="32dp"
-                            android:paddingEnd="32dp"
                             android:layout_height="@dimen/standard_button_height"
                             android:background="@drawable/gym_bag_button_background"
+                            android:paddingEnd="32dp"
+                            android:paddingStart="32dp"
                             android:text="@string/join"
                             android:textAlignment="center"
                             android:textAllCaps="false"
@@ -215,8 +215,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:paddingStart="16dp"
                             android:paddingEnd="16dp"
+                            android:paddingStart="16dp"
                             android:text="@string/or"
                             android:textAlignment="center"
                             android:textColor="@color/white"
@@ -225,13 +225,13 @@
                         <Button
                             android:id="@+id/login_button"
                             style="?android:attr/borderlessButtonStyle"
-                            android:paddingStart="32dp"
-                            android:paddingEnd="32dp"
                             android:layout_width="wrap_content"
                             android:layout_height="@dimen/standard_button_height"
                             android:layout_gravity="center"
                             android:background="@drawable/light_button_edit_profile_image"
                             android:gravity="center"
+                            android:paddingEnd="32dp"
+                            android:paddingStart="32dp"
                             android:text="@string/sign_in"
                             android:textAlignment="center"
                             android:textAllCaps="false"
@@ -246,12 +246,13 @@
                     android:id="@+id/fragment_wall_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:paddingStart="16dp"
-                    android:nestedScrollingEnabled="false"
                     android:layout_below="@id/login_holder"
                     android:layout_marginTop="?wallRecyclerListPhoneTopMargin"
                     android:clipToPadding="false"
-                    android:paddingTop="8dp" />
+                    android:nestedScrollingEnabled="false"
+                    android:paddingTop="8dp"
+                    tools:paddingStart="16dp"
+                    tools:targetApi="lollipop" />
 
             </RelativeLayout>
 
