--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -110,15 +110,12 @@
                     android:layout_centerVertical="true"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:minHeight="@dimen/height_30"
-                    android:minWidth="@dimen/width_60"
-                    android:paddingEnd="@dimen/padding_2"
+                    android:layout_marginEnd="8dp"
                     tools:text="BEN"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    app:autoSizeMaxTextSize="@dimen/font_size_28"
-                    app:autoSizeMinTextSize="@dimen/font_size_20"
+                    android:textSize="20sp"
                     app:autoSizeStepGranularity="1sp"
                     app:autoSizeTextType="uniform" />
 
@@ -126,6 +123,7 @@
                     android:id="@+id/logoOfFirstTeam"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
+                    tools:src="@drawable/sportingportugal"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@+id/nameOfFirstTeam" />
 
@@ -143,6 +141,7 @@
 
                 <ImageView
                     android:id="@+id/logoOfSecondTeam"
+                    tools:src="@drawable/sportingportugal"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
                     android:layout_centerVertical="true"
@@ -156,16 +155,12 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@+id/logoOfSecondTeam"
-                    android:maxLines="1"
-                    android:minHeight="@dimen/height_30"
-                    android:minWidth="@dimen/width_60"
-                    android:paddingStart="@dimen/padding_2"
+                    android:layout_marginStart="8dp"
                     tools:text="BEN"
+                    android:textSize="20sp"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    app:autoSizeMaxTextSize="@dimen/font_size_28"
-                    app:autoSizeMinTextSize="@dimen/font_size_20"
                     app:autoSizeStepGranularity="1sp"
                     app:autoSizeTextType="uniform" />
             </RelativeLayout>
