--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -347,4 +347,8 @@
         <item name="android:textSize">@dimen/font_size_28</item>
     </style>
 
+    <style name="AppTheme.BlackAccent" parent="AppTheme">
+        <item name="colorControlActivated">@color/black</item>
+    </style>
+
 </resources>
