--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -189,6 +189,9 @@
                                 android:layout_height="42dp"
                                 android:layout_marginEnd="@dimen/padding_8"
                                 android:layout_weight="1"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:foreground="?selectableItemBackgroundBorderless"
                                 android:gravity="center">
 
                                 <android.support.v7.widget.AppCompatImageView
