--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -351,4 +351,9 @@
         <item name="colorControlActivated">@color/black</item>
     </style>
 
+    <style name="DialogActivity" parent="Theme.AppCompat.Light.Dialog">
+        <item name="windowNoTitle">true</item>
+        <item name="android:excludeFromRecents">true</item>
+    </style>
+
 </resources>
