color placeholder for header images

--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -28,6 +28,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:scaleType="centerCrop"
+                    android:background="#446600"
                     tools:src="@drawable/image_wall_background" />
 
                 <TextView
